r tree code